Bugs #405 and 437 - Removed extraneous add links from tables in view screens, removed double borders, changed copy from box to button

--- a/src/feeddb/feed/static/src/less/custom.less
+++ b/src/feeddb/feed/static/src/less/custom.less
@@ -756,6 +756,7 @@ body { background: url('../../../../../images/satinweave.png'); color: @navy; co
     .masthead { background: url('../../../../../images/greyzz.png'); padding-bottom: 30px; border-bottom: 1px solid rgb(220,220,220); border-bottom: 1px solid rgba(220,220,220,1); }
     &.view {
       .masthead { background-image: none; padding-bottom: 0; border-bottom: 0; }
+      .large-table { border: 0; }
     }
     main {
       form {
